Support editing responses Fix overflow problem by switching clearfix method

--- a/src/css/sass/components/surveys.scss
+++ b/src/css/sass/components/surveys.scss
@@ -114,6 +114,15 @@
     top: 20px;
   }
 
+  button.action-save-edit,
+  button.action-cancel-edit {
+    display: none;
+  }
+
+  .edit {
+    display: none;
+  }
+
   .time, .collector {
     color: $body-accent;
   }
@@ -143,6 +152,13 @@
       .review-tools {
         display: inline-block;
         float: left;
+        padding-right: 5px;
+        border-right: 3px solid $thinpink;
+        margin-right: 15px;
+
+        button {
+          margin-bottom: 0;
+        }
       }
 
       .action-show-confirm {
